[package]
name = "minimad"
version = "0.3.2"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/minimad"
description = "light Markdown parser"
edition = "2018"
keywords = ["markdown", "parser"]
license = "MIT"
categories = ["gui", "parser-implementations"]
readme = "README.md"

[dependencies]
