[package]
name = "minimad"
version = "0.6.4"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/minimad"
description = "light Markdown parser"
edition = "2018"
keywords = ["markdown", "parser", "template"]
license = "MIT"
categories = ["gui", "parser-implementations"]
readme = "README.md"

[dependencies]
lazy_static = "1"
