[package]
name = "minimad"
version = "0.12.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/minimad"
description = "light Markdown parser"
edition = "2018"
keywords = ["markdown", "parser", "template"]
license = "MIT"
categories = ["gui", "parser-implementations"]
readme = "README.md"

[dependencies]
once_cell = "1.17"

[features]
escaping = []
default = ["escaping"]
